Name:                   hsemail
Version:                2.0.0
Copyright:              (c) 2013-2015 Peter Simons
License:                BSD3
License-File:           LICENSE
Author:                 Peter Simons <simons@cryp.to>, Gero Kriependorf <gero-dev@physra.net>, Marty Pauley <marty@kasei.com>, Alberto Valverde <alberto@toscat.net>
Maintainer:             Peter Simons <simons@cryp.to>
Homepage:               http://github.com/peti/hsemail
Category:               Parsing
Synopsis:               Internet Message Parsers
Description:            Parsers for the syntax defined in RFC2821 and 2822
Cabal-Version:          >= 1.8
Build-Type:             Simple
Tested-With:            GHC >= 7.0.4 && <= 7.8.3

Extra-Source-Files:     example/message-test.hs
                        example/message-test.input
                        example/smtp-test.hs
                        example/smtp-test.input

Source-Repository head
  Type:                 git
  Location:             git://github.com/peti/hsemail.git

Library
  Build-Depends:        base >= 3 && < 5, mtl, parsec, old-time
  Exposed-Modules:      Text.ParserCombinators.AttoParsec.Rfc2234
                        Text.ParserCombinators.AttoParsec.Rfc2821
                        Text.ParserCombinators.AttoParsec.Rfc2822
  Ghc-Options:          -Wall

Test-Suite test-hsemail
  type:                 exitcode-stdio-1.0
  main-is:              self-test.hs
  build-depends:        base, hspec, parsec, old-time

Test-Suite doctest-hsemail
  type:                 exitcode-stdio-1.0
  main-is:              doc-test.hs
  build-depends:        base, doctest
